# snow-revoke-privileges

./: .bumpversion.cfg  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg
.devcontainer/: Dockerfile  check-post-install.sh  devcontainer.json  install-deps.sh  install-deps.sh2  install.sh
.github/workflows/: linters.yml  main.yml
snowflake_reset/: __main__.py  config-example.yaml  config.yaml-example  reset_privilege.py
snowflake_reset/tools/: my_dataframe.py  my_snowflake.py
src/snow_revoke_privileges/: __main__.py  application.py  config-example.yaml  reset_privilege.py  snow_new_grant_requests.py  snow_objects.py  snow_privileges.py  snow_revoke_requests.py
src/snow_revoke_privileges/config/: application.yaml  config-example.yaml
src/snow_revoke_privileges/tools/: configuration.py  my_dataframe.py  my_snowflake.py
tests/: test_reset_privilege.py
tests/datasets/test_reset_privilege/: config-test.yaml  expected_test_filter_databases.json  source_test_filter_databases.json
tests/tools/: test_my_dataframe.py
tools/: build-project.sh  execute-linters.sh  execute-tests.sh  pyrightconfig.json  upgrade-all-python-package.sh
