[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "snow_revoke_privileges"

authors = [
  { name="Bastien Gautier" },
]

description = "A package to reset all privileges and ownerships on Snowflake database"
readme = "README.md"
requires-python = ">=3.10"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Database"
]

dynamic = ["dependencies", "version"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {file = "src/snow_revoke_privileges/version"}
